Fix feed layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -281,5 +281,16 @@
     flex: 1;
     line-height: 1.4;
   }
+
+  /* Full-bleed media utility for edge-to-edge images/videos */
+  .full-bleed {
+    position: relative;
+    left: 50%;
+    right: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
+    width: 100vw;
+    max-width: 100vw;
+  }
 }
 
